[package]
name = "rrelayer_cli"
version = "0.0.1"
edition = "2024"

[dependencies]
# internal dependencies
rrelayer_core = { path = "../core" }
rrelayer = { path = "../sdk" }

# external dependencies
clap = { version = "4.4.11", features = ["derive"] }
dialoguer = "0.11"
regex = "1.5.4"
colored = "2.0"
tokio = "1.35.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
thiserror = "1.0"
prettytable = "0.10.0"
chrono = "0.4.41"
hex = "0.4.3"
rpassword = "7.3"

alloy = { workspace = true, features = ["full", "signer-mnemonic", "eips", "eip712", "signer-keystore"] }
alloy-rlp = { workspace = true }
alloy-eips = { workspace = true }

# build
tikv-jemalloc-ctl = { version = "0.6.0", optional = true }
tikv-jemallocator = { version = "0.6.0", optional = true }
rand = "0.8.5"

[features]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]
