[package]
name = "rrelayer"
version = "0.0.1"
edition = "2024"
authors = ["joshstevens19@hotmail.co.uk"]
license = "MIT"
description = "The official Rust SDK for interacting with rrelayer services - a powerful blockchain transaction relay service"
homepage = "https://rrelayer.xyz"
repository = "https://github.com/joshstevens19/rrelayer"
documentation = "https://docs.rs/rrelayer"
readme = "README.md"
keywords = ["blockchain", "ethereum", "evm", "transaction", "relay"]
categories = ["api-bindings", "web-programming", "cryptography::cryptocurrencies"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "../../LICENSE"
]

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "native-tls", "cookies"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = "2.0.6"
alloy = { workspace = true, features = ["full", "signer-mnemonic", "eips", "eip712"] }
base64 = "0.22.0"
rrelayer_core = { path = "../core" }
tokio = { version = "1", features = ["time"] }
async-trait = "0.1"
hex = "0.4"

